spec/e2e/loops/break/invalid.lit
# error: [line 3] Error at "break": Can't use 'break' outside of a loop.
fn function {
  break;
}

# error: [line 7] Error at "break": Can't use 'break' outside of a loop.
break;
